[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=2]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Proyectiles/Proyectil_player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/Naves/DanioSFX.ogg" type="AudioStream" id=10]

[node name="NaveBase" type="RigidBody2D"]
rotation = -7.65147e-05
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -7.65324e-05 )

[node name="Canion" parent="." instance=ExtResource( 4 )]
proyectil = ExtResource( 6 )

[node name="DanioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.18
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
